[gd_scene load_steps=14 format=3 uid="uid://b44npv8wm7sxc"]

[ext_resource type="Script" uid="uid://bbuwspaa84yy2" path="res://Scenes/Enemies/enemy_2.gd" id="1_0gdaw"]
[ext_resource type="Texture2D" uid="uid://dfwcbq254y5yh" path="res://Assets/Art/Kevin.png" id="2_pfv8h"]
[ext_resource type="Script" uid="uid://dr8bvnfebp76" path="res://addons/health_hitbox_hurtbox/health/health.gd" id="3_nwsdi"]
[ext_resource type="Script" uid="uid://ctuf38y050aep" path="res://addons/health_hitbox_hurtbox/2d/hurt_box_2d/hurt_box_2d.gd" id="4_pfv8h"]
[ext_resource type="Script" uid="uid://b1vnxk5bfh6el" path="res://addons/health_hitbox_hurtbox/2d/hit_box_2d/hit_box_2d.gd" id="5_01olu"]
[ext_resource type="Script" uid="uid://hrwhd52e5mkq" path="res://addons/health_hitbox_hurtbox/resources/action.gd" id="6_p7ad5"]
[ext_resource type="Script" uid="uid://bioisea5b6nlu" path="res://Scenes/Enemies/States/state_machine.gd" id="7_nwsdi"]
[ext_resource type="Script" uid="uid://3imp3aoucqn2" path="res://Scenes/Enemies/States/move.gd" id="8_pfv8h"]
[ext_resource type="Script" uid="uid://buswtuhqrg7hw" path="res://Scenes/Enemies/charge.gd" id="9_pfv8h"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fvv5b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6vmfr"]
radius = 16.0

[sub_resource type="Resource" id="Resource_6vmfr"]
script = ExtResource("6_p7ad5")
affect = 1
type = 2
amount = 1
metadata/_custom_type_script = "uid://hrwhd52e5mkq"

[sub_resource type="CircleShape2D" id="CircleShape2D_wrykn"]
radius = 16.0

[node name="Enemy2" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_0gdaw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pfv8h")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 5.0

[node name="Animation" type="Node" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="Animation"]
tree_root = SubResource("AnimationNodeStateMachine_fvv5b")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]

[node name="Hp Player" type="Node2D" parent="."]

[node name="Health" type="Node" parent="Hp Player"]
script = ExtResource("3_nwsdi")
current = 10
max = 10
metadata/_custom_type_script = "uid://dr8bvnfebp76"

[node name="HurtBox2D" type="Area2D" parent="Hp Player" node_paths=PackedStringArray("health")]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_pfv8h")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://ctuf38y050aep"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hp Player/HurtBox2D"]
visible = false
shape = SubResource("CircleShape2D_6vmfr")

[node name="HitBox2D" type="Area2D" parent="."]
script = ExtResource("5_01olu")
actions = Array[ExtResource("6_p7ad5")]([SubResource("Resource_6vmfr")])
metadata/_custom_type_script = "uid://b1vnxk5bfh6el"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox2D"]
visible = false
shape = SubResource("CircleShape2D_wrykn")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("7_nwsdi")
starting_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("charge_state")]
script = ExtResource("8_pfv8h")
charge_state = NodePath("../Charge")

[node name="Charge" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state")]
script = ExtResource("9_pfv8h")
ChargeSpeed = 150.0
move_state = NodePath("../Move")

[node name="ChargeTime" type="Timer" parent="StateMachine/Charge"]
wait_time = 1.5
one_shot = true

[node name="TargetTime" type="Timer" parent="StateMachine/Charge"]
wait_time = 0.8
one_shot = true

[connection signal="died" from="Hp Player/Health" to="." method="_on_health_died"]
[connection signal="timeout" from="StateMachine/Charge/ChargeTime" to="StateMachine/Charge" method="_on_charge_time_timeout"]
[connection signal="timeout" from="StateMachine/Charge/TargetTime" to="StateMachine/Charge" method="_on_target_time_timeout"]
